1. Fixed Routing issue 2. navigate to correct page after preview mode 3. added functionality to category cards in home page. 4. Added an explore all button and aligned it with the search bar in the home page 5. Fixed minor design flaws in the search bar.

--- a/product-manager/src/Styles/HomePage.css
+++ b/product-manager/src/Styles/HomePage.css
@@ -50,15 +50,14 @@
 .search-container {
     background-color: white;
     border-radius: 30px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .rounded-search .MuiOutlinedInput-root {
-    border-radius: 20px;
+    border-radius: 30px;
 }
 
 .rounded-search .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-    border-radius: 20px;
+    border-radius: 30px;
 }
 
 /* Cards styling */
@@ -77,4 +76,33 @@
     max-width: 80%;
     margin: auto;
     text-align: center;
+}
+
+.search-or-explore {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-right: 5px;
+}
+
+.vertical-divider {
+    height: 80%;
+    width: 2px;
+    background-color: white;
+    margin: 0 5px;
+}
+
+
+.hero-button {
+    background-color: rgba(255, 255, 255, 0.2); 
+    border: 2px solid white !important;  
+    color: white;
+    border-radius: 25px;
+    transition: background-color 0.3s ease, transform 0.3 ease;
+    letter-spacing: 1px;
+}
+
+.hero-button:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #333;
 }
